Keyframe resolution methods should use reference instead of pointer parameters https://bugs.webkit.org/show_bug.cgi?id=236020

Reviewed by Dean Jackson.

The Style::Resolver::styleForKeyframe() method would take in a `const RenderStyle*`
and a `const StyleRuleKeyframe*` but these parameters were used without null checks.
This patch changes this method signature to take in references instead, which involves
also changing the signature for Style::Resolver::keyframeStylesForAnimation().

* animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::getKeyframes):
(WebCore::KeyframeEffect::updateBlendingKeyframes):
(WebCore::KeyframeEffect::computeCSSAnimationBlendingKeyframes):
(WebCore::KeyframeEffect::applyPendingAcceleratedActions):
* rendering/style/KeyframeList.cpp:
(WebCore::KeyframeList::fillImplicitKeyframes):
* rendering/style/KeyframeList.h:
* style/StyleResolver.cpp:
(WebCore::Style::Resolver::styleForKeyframe):
(WebCore::Style::Resolver::keyframeStylesForAnimation):
* style/StyleResolver.h:



Canonical link: https://commits.webkit.org/246723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289014 268f45cc-cd09-0410-ab3c-d52691b4dbfc